@startuml

title __SPACEINVADERS's Class Diagram__\n

  namespace fr.unilim.iut.spaceinvaders {
    class fr.unilim.iut.spaceinvaders.Dimension {
        ~ hauteur : int
        ~ longueur : int
        + Dimension()
        + hauteur()
        + longueur()
    }
  }
  

  namespace fr.unilim.iut.spaceinvaders {
    class fr.unilim.iut.spaceinvaders.Position {
        ~ x : int
        ~ y : int
        + Position()
        + abscisse()
        + changerAbscisse()
        + changerOrdonnee()
        + ordonnee()
    }
  }
  

  namespace fr.unilim.iut.spaceinvaders {
    class fr.unilim.iut.spaceinvaders.SpaceInvaders {
        {static} + MARQUE_FIN_LIGNE : char
        {static} + MARQUE_VAISSEAU : char
        {static} + MARQUE_VIDE : char
        {static} + PREMIERE_MARQUE_PAR_LIGNE : int
        ~ hauteur : int
        ~ longueur : int
        + SpaceInvaders()
        + aUnVaisseau()
        + aUnVaisseauQuiOccupeLaPosition()
        + deplacerVaisseauVersLaDroite()
        + deplacerVaisseauVersLaGauche()
        + estDansEspaceJeu()
        + positionnerUnNouveauVaisseau()
        + recupererEspaceJeuDansChaineASCII()
        + recupererMarqueDeLaPosition()
        + toString()
    }
  }
  

  namespace fr.unilim.iut.spaceinvaders {
    class fr.unilim.iut.spaceinvaders.Vaisseau {
        + Vaisseau()
        + Vaisseau()
        + Vaisseau()
        + abscisseLaPlusADroite()
        + abscisseLaPlusAGauche()
        + deplacerVersLaDroite()
        + deplacerVersLaGauche()
        + estAbscisseCouverte()
        + estOrdonneeCouverte()
        + occupeLaPosition()
        + ordonneeLaPlusBasse()
        + ordonneeLaPlusHaute()
        + positionner()
    }
  }
  

  fr.unilim.iut.spaceinvaders.SpaceInvaders o-- fr.unilim.iut.spaceinvaders.Vaisseau : vaisseau
  fr.unilim.iut.spaceinvaders.Vaisseau o-- fr.unilim.iut.spaceinvaders.Dimension : dimension
  fr.unilim.iut.spaceinvaders.Vaisseau o-- fr.unilim.iut.spaceinvaders.Position : origine


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
